# c-development-kit

./: LICENSE  README.md
src/: CMakeLists.txt
src/core/hashes/fnv/: fnv1a.c
src/core/hashes/fnv/fnv1a/: .gitignore  fnv1a-tests.c  fnv1a.c  fnv1a.h  run.sh
src/core/strings/string-builder/: run.sh  string-builder-tests.c  string-builder.c  string-builder.h
